--- a/css/style.css
+++ b/css/style.css
@@ -1645,7 +1645,7 @@ body {
     top: -150%;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: black;
     opacity: 0.9;
     overflow: auto;
