--- a/css/style.css
+++ b/css/style.css
@@ -1937,7 +1937,12 @@ body {
   }
 
   .footer-wrapper .column__location {
-    margin: 0 0 50px 10%;
+    margin: 0 0 50px 0;
+    text-align: center;
+  }
+
+  .form {
+    padding: 0 0 0 0px;
   }
 
   .footer-wrapper-inner {
@@ -1966,24 +1971,33 @@ body {
     margin-bottom: 0 !important;
   }
 
-  .column__form {
-    padding: 0 0 0 10% !important;
+  .form__title {
+    text-align: center;
+    padding: 0 0 10px 0;
   }
 
   .form__subscribe {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
   }
 
   .form__subscribe a {
     padding: 0 36px;
     line-height: 3;
     font-size: 14px;
+    width: 100%;
   }
 
   .form__subscribe input {
-    margin: 1px 0 0 0;
+    width: 100%;
+    max-width: 100%;
+    padding: 0 0 0 10px;
   }
 
   .form__social {
