--- a/css/style.css
+++ b/css/style.css
@@ -1389,6 +1389,10 @@ h6 {
   background-color: #484f50;
 }
 
+.footer-wrapper__top {
+  padding: 0 0 50px 0;
+}
+
 .footer-wrapper-inner {
   padding: 100px 0 0 0;
 }
@@ -1509,12 +1513,13 @@ h6 {
 .form__subscribe a {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
+  white-space: nowrap;
   color: #ffffff;
   font-family: Montserrat;
   font-size: 10px;
   font-weight: 700;
   text-transform: uppercase;
-  padding: 15px 21px;
+  padding: 15px 27px;
   background-color: #a57ee7;
   border: 1px solid #505050;
   line-height: 4;
@@ -1531,6 +1536,8 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .social-list li {
@@ -1826,6 +1833,83 @@ body {
   .items-slider .slick-list {
     padding: 0 0 530px 0;
   }
+
+  .footer-wrapper .column__common {
+    text-align: center;
+    line-height: 3;
+  }
+
+  .footer-wrapper .column__common-text {
+    padding-right: 0px;
+  }
+
+  .footer-wrapper .column__location {
+    margin: 0 0 50px 0;
+    text-align: center;
+  }
+
+  .form {
+    padding: 0 0 0 0px;
+  }
+
+  .footer-wrapper-inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0 0 50px 0;
+  }
+
+  .column__common-brand {
+    margin: 0 0 50px 0;
+  }
+
+  .column__navigation {
+    display: none;
+  }
+
+  .column__location {
+    margin: 0 0 50px;
+  }
+
+  .column__common-title,
+  .contacts__title,
+  .form__title {
+    margin-bottom: 0 !important;
+  }
+
+  .form__title {
+    text-align: center;
+    padding: 0 0 10px 0;
+  }
+
+  .form__subscribe {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+
+  .form__subscribe a {
+    padding: 0 36px;
+    line-height: 3;
+    font-size: 14px;
+    width: 100%;
+  }
+
+  .form__subscribe input {
+    width: 100%;
+    max-width: 100%;
+    padding: 0 0 0 10px;
+  }
+
+  .form__social {
+    padding: 20px;
+  }
 }
 
 @media (max-width: 580px) {
@@ -1925,83 +2009,6 @@ body {
 
   .about-info__btn {
     text-align: center;
-  }
-
-  .footer-wrapper .column__common {
-    text-align: center;
-    line-height: 3;
-  }
-
-  .footer-wrapper .column__common-text {
-    padding-right: 0px;
-  }
-
-  .footer-wrapper .column__location {
-    margin: 0 0 50px 0;
-    text-align: center;
-  }
-
-  .form {
-    padding: 0 0 0 0px;
-  }
-
-  .footer-wrapper-inner {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin: 0 0 50px 0;
-  }
-
-  .column__common-brand {
-    margin: 0 0 50px 0;
-  }
-
-  .column__navigation {
-    display: none;
-  }
-
-  .column__location {
-    margin: 0 0 50px;
-  }
-
-  .column__common-title,
-  .contacts__title,
-  .form__title {
-    margin-bottom: 0 !important;
-  }
-
-  .form__title {
-    text-align: center;
-    padding: 0 0 10px 0;
-  }
-
-  .form__subscribe {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
-  }
-
-  .form__subscribe a {
-    padding: 0 36px;
-    line-height: 3;
-    font-size: 14px;
-    width: 100%;
-  }
-
-  .form__subscribe input {
-    width: 100%;
-    max-width: 100%;
-    padding: 0 0 0 10px;
-  }
-
-  .form__social {
-    padding: 20px;
   }
 }
 
